<resources>
    <string name="app_name">News App</string>

    <string name="breakingNewsTitle">Breaking News</string>
    <string name="breakingNewsBusiness">Business</string>
    <string name="breakingNewsSports">Sports</string>
    <string name="breakingNewsTech">Tech</string>
    <string name="breakingNewsEducation">Education</string>
    <string name="breakingNewsPolitics">Politics</string>
    <string name="breakingNewsCrypto">Crypto</string>

    <string name="savedNewsTitle">Bookmarks</string>

    <string name="articleSource">Source</string>
    <string name="articlePublish">Published At</string>
    <string name="articleTitle">TITLE</string>
    <string name="articleDesc">News Description</string>

    <string-array name="country">
        <item>Argentina</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Belgium</item>
        <item>Brazil</item>
        <item>Bulgaria</item>
        <item>Canada</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Cuba</item>
        <item>Czech Republic</item>
        <item>Egypt</item>
        <item>France</item>
        <item>Germany</item>
        <item>Greece</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Japan</item>
        <item>Latvia</item>
        <item>Lithuania</item>
        <item>Malaysia</item>
        <item>Mexico</item>
        <item>Netherlands</item>
        <item>New Zealand</item>
        <item>Nigeria</item>
        <item>Norway</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Saudi Arabia</item>
        <item>Serbia</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>South Africa</item>
        <item>South Korea</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Taiwan</item>
        <item>Thailand</item>
        <item>Turkey</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Venezuela</item>
    </string-array>

</resources>