<?xml version="1.0" encoding="utf-8"?>

<!-- All icons here is “Designed by Freepik” -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/paginationProgressBar"
            style="@style/SpinKitView.ThreeBounce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_marginTop="300dp"
            android:visibility="visible"
            app:SpinKit_Color="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"  />

        <LinearLayout
            android:id="@+id/errorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_error_message"
                android:layout_gravity="center"
                app:tint="?attr/colorPrimary"/>
            <TextView
                android:id="@+id/errMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="No Internet Connection"
                android:textColor="?attr/colorPrimary"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"/>
        </LinearLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/parentLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">
            <TextView
                android:id="@+id/tvBreakingNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:text="@string/breakingNewsTitle"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="?attr/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvBreakingNews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvBreakingNews"
                android:clipToPadding="false"
                android:paddingBottom="4dp"
                app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvBreakingNews" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rvBreakingNews"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/rvCategoryNews"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:scrollbars="none">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/businessBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:textSize="14sp"
                        android:padding="10dp"
                        android:text="@string/breakingNewsBusiness"
                        android:textColor="?attr/colorPrimary"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                        app:icon="@drawable/ic_business"/>
                    <Button
                        android:id="@+id/sportBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:text="@string/breakingNewsSports"
                        android:textColor="?attr/colorPrimary"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                        app:icon="@drawable/ic_sport"/>
                    <Button
                        android:id="@+id/techBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:text="@string/breakingNewsTech"
                        android:textColor="?attr/colorPrimary"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                        app:icon="@drawable/ic_tech"/>
                    <Button
                        android:id="@+id/educBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:text="@string/breakingNewsEducation"
                        android:textColor="?attr/colorPrimary"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                        app:icon="@drawable/ic_business"/>
                    <Button
                        android:id="@+id/politicsBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:text="@string/breakingNewsPolitics"
                        android:textColor="?attr/colorPrimary"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                        app:icon="@drawable/ic_politics"/>
                    <Button
                        android:id="@+id/cryptoBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:text="@string/breakingNewsCrypto"
                        android:textColor="?attr/colorPrimary"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                        app:icon="@drawable/ic_business"/>

                </LinearLayout>
            </HorizontalScrollView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCategoryNews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.github.ybq.android.spinkit.SpinKitView
                android:id="@+id/paginationProgressBarCateg"
                style="@style/SpinKitView.ThreeBounce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:paddingBottom="50dp"
                android:layout_marginTop="50dp"
                android:visibility="gone"
                app:SpinKit_Color="?attr/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/rvCategoryNews" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>